# KudanCV-Android-Demo

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/eu/kudan/ar/: CameraFragment.java  CameraSurfaceView.java  Drawing.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  camera_fragment.xml
app/src/main/res/values/: strings.xml
